--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-onesignal": "^3.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   }
